Payment endpoint #22
Was added the option to insert a value using the client bounded to the logged user
